{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "5a3a4600-d0e6-41bc-a9fc-76546bd56de2",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "b6e53ca6-709d-4f3a-88d7-a8902bc6322b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.01),SlowTap(duration=0.05)",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "2ee63f16-d832-45ce-ad7e-088bfbdf8d20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.01),SlowTap(duration=0.05)",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "73e67073-19a0-430a-b644-b92caffb1fa0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50cc4a9d-1585-4f33-85cb-9e9b3465741a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5fc3766-0980-428b-a733-4429ae3a09c3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9710b70-4efa-4f1c-a7bb-41db78fa0084",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement",
            "id": "92c598c7-7816-4a38-8131-9f42f09bfa54",
            "actions": [
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "686d6ad2-c842-4cb8-9a8f-4444c1576d7a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "0005915b-fcc8-422c-99e7-481471bf2554",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7500be71-0c83-4821-a70f-fdb23828d4f5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28afb654-a642-4bdc-afd4-36183b9d6799",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}